# gois-lite

./: .env.example  .gitignore  .gois-lite  config.example.yaml  config.yaml  pyproject.toml
.cursor/: mcp.json
scripts/: setup_mongo.sh  start.ps1  start.sh
scripts/lib/: filter_dev_skills.py  gois-lite-README.md  init_gois_lite_git.sh  install-editable.sh  prune_gois_lite.py  resolve-python.sh  write_lite_mcp_json.py
src/gois/: MCP_README.md  __main__.py  accounts.py  accounts_mongo.py  accounts_team_guard.py  agent.py  agent_role_skills.py  alerting.py  app_nav.py  article_md_generator.py  cache_paths.py  chat_artifacts.py  chat_history.py  chat_jobs.py  chat_models.py  chat_page.py  chat_progress.py  chat_prompt_policy.py  chat_rv_screens.py  chat_send_queue.py  chat_tool_background.py  config.py  curso_notebooks_docker.py  dashboard.py  dashboard.py.bak.swarm  dashboard.py.bak.swarm2  dashboard.py.swarm-backup  dashboard_theme.py  diagnosis.py  disambiguation.py  elevenlabs_voice.py  env_keys_catalog.py  env_keys_mongo.py  env_util.py  error_log.py  gemini_computer_use.py  gemini_music.py  github_team_repo.py  gois_lite.py  gois_lite_ui.py  (+163 more)
src/gois/assets/: app_nav.css  app_search.js  app_theme.css  app_ui.css  chat.html  dark_mode.js  gois_moods.json  kanban.html  login.html  team_picker.css  team_picker.html  team_picker.js
src/gois/assets/components/: ControlsPanel.css  ControlsPanel.tsx  README.md  controls-panel.css  controls-panel.html  controls-panel.js  test-controles.html
src/gois/roteiro_viral/agents/: metadata_agent.py
src/gois/roteiro_viral_bookWorkspace/: BookBaseTab.tsx  BookCreator.tsx  BookLibrary.tsx  BookMetadataTab.tsx  BookStructureTree.tsx  BookWorkspace.tsx  SectionActionsPanel.tsx  SectionQuestionsPanel.tsx  WorkspaceTabs.tsx  bookCreatorFlowUtils.ts  bookWorkspaceUtils.ts
src/gois/roteiro_viral_bookWorkspace/courseWorkspace/: CourseStructurePanel.tsx  CourseStructureTree.tsx  CourseWorkspace.tsx  LessonContentPanel.tsx  WorkspaceTabs.tsx  courseWorkspaceUtils.ts
src/gois/roteiro_viral_comicWorkspace/: ComicStructureTree.tsx  comicWorkspaceUtils.ts
src/gois/roteiro_viral_local/: __init__.py  bootstrap.py  config.py  dispatch.py  embedded_api.py  embedded_worker.py  gemini_text.py  images.py  jobs.py  social.py  styles.py  thumbnails.py
